      Burner miner searches for chemical fuel in that chest (not in other nearby chests!) before searching for player and steal from his inventory in nearby range.
      - Burner miner select to take fuel with less emission when stealing from chest/player to avoid natives attention whenever possible.
      - Not sure about old 1.2.* game saves support.
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 2022-01-19
  Changes:
      - Creep miner buildings introduced. Chemical fuel energy based and Electric energy based. Graphics for them was taken from Amator Phasma Coal&Steam and Yuoki Industries mods.
      First one is portable and self re-fueling from player inventory. Second one has bigger reach area, more power-hungry and produce pollution only on creep excavation.
      They work slower than Krastorio cheat-shovel, consume energy permanently, produce pollution per each creep tile removed. But can sometimes remove fake creep where shovel can't (in early game).
      Most important - should give factorio automation gameplay, help vs coming-soon Warmonger painful feature and vs Creeper. They do sleep to keep base energy consumption and UPS down.
      Veden's Rampant Industry airfilter (low UPS consumption goes here!) and ItemCollector mods ideas and code used.
      - Creep generation balance. One more attempt to avoid too much biomass for 200%+ enemy bases density.
      - Creep pollution absorption increased from 5 to 10 dead trees per tile for Deathworld mode and Creeper mod balance.
      - Creep retaliation strikes feature introduced in raw version. Turn on/off with command (look for it in readme).
      Description: Biters counter attack with creep-2 deploying shells for big-range attacks on their bases (three levels depending on distance) after evolution exceeds 35%.