@@ -277,6 +277,11 @@ corrosion-enabled=Buildings corrosion by creep acid is enabled !
 kr-amount-in-selection=Selected area contains: __1__ __2__ and __3__ __4__
 corrosion-strikes-disabled=Biters retaliation strikes are disabled !
 corrosion-strikes-enabled=Biters retaliation strikes are enabled !
+creepminer-hints-disabled=Flying hints for not working creep miners are disabled !
+creepminer-hints-enabled=Flying hints for not working creep miners are enabled !
+wm-true-creep-protected=Creep miner is blocked by enemies to collect biomass creep
+wm-no-storage-for-true-creep=No chest found to store biomass of excavated biter creep
+wm-all-creep-protected=All reachable creep is protected by enemies
 
 
 [modifier-description]
